# dsge-scratch

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec.md  support.md  tmp_check_ea.py  tmp_check_ea2.py  tmp_debug_var.py
examples/rbc_basic/: rbc.mod
model_base/CA_BMZ12/: readme.txt
model_base/CA_LS07/: read_me.asv  read_me.txt
model_base/CL_MS07/: read_me.txt  run.m
model_base/DEREA_GEAR16/: DEREA_GEAR16.json  DEREA_GEAR16.mod
model_base/EACZ_GEM03/: read_me.txt
model_base/EAES_RA09/: read_me.txt  run.m
model_base/EAUS_NAWM08/: read_me.txt  run.m
model_base/EA_ALSV06/: run.m
model_base/EA_AWM05/: IRFsOriginal.txt  read_me.txt  run.m
model_base/EA_CW05fm/: read_me.txt  run.m
model_base/EA_CW05ta/: read_me.txt  run.m
model_base/EA_DKR11/: read_me.txt  run.asv  run.m
model_base/EA_GE10/: read_me.txt  run.m
model_base/EA_GNSS10/: read_me.txt  run.m
model_base/EA_PV15/: read_me.txt  run.m
model_base/EA_QR14/: PLOTS.m  PLOTS2.m  optimalTR.mod  optimalTRandREG.mod  read_me.txt
model_base/EA_QUEST3/: read_me.txt  run.asv  run.m
model_base/EA_SR07/: read_me.txt  run.m
model_base/EA_SW03/: read_me.txt  run.m
model_base/ESREA_FIMOD12/: ESREA_FIMOD12.json  ESREA_FIMOD12.mod
model_base/G2_SIGMA08/: read_me.txt  run.m
model_base/G3_CW03/: read_me.txt  run.m
model_base/G7_TAY93/: read_me.txt  run.m
model_base/GPM6_IMF13/: read_me.txt
model_base/NK_AFL15/: Read_me.txt  run.m
model_base/NK_BGEU10/: NK_BG10_replication.m  readme.txt
output_plots/: diagnostics.npz
scripts/: generate_plots.py
sgelabs/: __init__.py  __main__.py
(+317 files in other folders)
